--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Lists#index</h1>
-<p>Find me in app/views/lists/index.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8bW92aWUlMjB0aGVhdGVyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60);">
+  <div class="container">
+    <h1>It's <strong>movie time</strong>!</h1>
+    <a class="btn btn-flat" href="<%= new_list_path %>">Create a new list</a>
+  </div>
+</div>
+
+<div class="container" style="margin-top:15px;">
+  <div class="cards">
+    <% @lists.each do |list| %>
+      <%= link_to list_path(list), style:"text-decoration:none;" do %>
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1575919220112-0d5a2dc6a4b6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YWN0aW9uJTIwbW92aWV8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60)">
+          <%= list.name %>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+</div>
