--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,2 +1,13 @@
 <h1>Lists#show</h1>
+
+<h2><%= @list.name %></h2>
+<div class="cards">
+  <% @list.movies.each do |movie| %>
+    <%= link_to  movie_path(movie), style:"text-decoration:none" do %>
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= movie.poster_url %>);">
+        <%= movie.name %>
+      </div>
+    <% end %>
+  <% end %>
+</div>
 <div class="btn btn-gradient" href="">Add movies to this list</div>
