--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,11 +3,17 @@
 <h2><%= @list.name %></h2>
 <div class="cards">
   <% @list.movies.each do |movie| %>
-    <%= link_to  movie_path(movie), style:"text-decoration:none" do %>
+    <%= link_to  movie_path(movie), style:"text-decoration:none; color: black" do %>
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= movie.poster_url %>);">
-        <%= movie.name %>
+          <%= movie.name %>
       </div>
+        <% movie.bookmarks.each do |bookmark| %>
+          <p><%= bookmark.comment %></p>
+        <% end %>
     <% end %>
   <% end %>
 </div>
-<div class="btn btn-gradient" href="">Add movies to this list</div>
+
+<%= link_to  "Add a new movie", new_list_bookmark_path(@list), class:"btn btn-gradient" %>
+
+
